--- a/index.html
+++ b/index.html
@@ -190,9 +190,14 @@
                 <div class="flex flex-col px-5 md:px-0">
                     <p class="text-center text-xs md:text-sm mt-3 text-green-400 hidden" id="success">Your message send successfully..!</p>
                     <p class="text-center text-xs md:text-sm mt-3 text-red-400 hidden" id="denied">Can't submit empty form..!</p>
+                    <p class="text-center text-xs md:text-sm mt-3 text-red-400 hidden" id="showlength">Name must be 15 letters..!</p>
                     <div class="flex flex-col w-full md:w-1/2 mx-auto mb-2 md:mb-5">
                         <label class="font-semibold md:text-xl mb-1" for="name">Name</label>
-                        <input class="rounded border p-2 md:p-3" id="name" type="text">
+                        <input class="rounded border p-2 md:p-3" id="name" type="text" oninput="handelname()">
+                        <div class="flex justify-end">
+                            <p class=" justify-end text-xs hidden" id="maxium">Maxium 15 letters  :</p>
+                            <p class="justify-end hidden text-xs" id="count">0</p>
+                        </div>
                     </div>
                     <div class="flex flex-col w-full md:w-1/2 mx-auto mb-2 md:mb-5">
                     <label class="font-semibold md:text-xl mb-1" for="email">E-mail</label>
